Getting the login to work for the system tables.

--- a/public/system-list.css
+++ b/public/system-list.css
@@ -9,6 +9,7 @@
 /* elements */
 body {
 	font-family: Georgia, sans-serif;
+	padding-top: 1em;
 }
 *[title] {
 	cursor: help;
@@ -41,4 +42,20 @@ td {
 td a {
 	color: inherit;
 	text-decoration: none;
+}
+
+#logout {
+	float: right;
+}
+#logout a {
+	text-decoration: none;
+	color: white;
+	background-color: silver;
+	border: 1px solid gray;
+	border-radius: 0.5em;
+	padding: 0.5em;
+	font-weight: bold;
+}
+#logout a:hover {
+	background-color: black;
 }
