--- a/public/system-upload.css
+++ b/public/system-upload.css
@@ -1,5 +1,6 @@
 body {
 	font-family: Georgia, sans-serif;
+	padding-top: 1em;
 }
 .hide {
 	display: none;
@@ -20,4 +21,20 @@ li {
 label {
 	width: 8em;
 	float: left;
+}
+
+#logout {
+	float: right;
+}
+#logout a {
+	text-decoration: none;
+	color: white;
+	background-color: silver;
+	border: 1px solid gray;
+	border-radius: 0.5em;
+	padding: 0.5em;
+	font-weight: bold;
+}
+#logout a:hover {
+	background-color: black;
 }
