--- a/views/system/db-upload.jade
+++ b/views/system/db-upload.jade
@@ -5,6 +5,8 @@ html(lang="de")
 		title DB-Upload
 		link(rel="stylesheet", type="text/css", href="/system-upload.css")
 	body
+		#logout
+			a(href="/logout") #{user.local.name} abmelden
 		h2 DB-Daten (JSON) laden
 		ul
 			li
