--- a/views/system/edit-talent.jade
+++ b/views/system/edit-talent.jade
@@ -14,6 +14,8 @@ html
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 	body
 		nav
+			#logout
+				a(href="/logout") #{user.local.name} abmelden
 			a(href="/talent/liste") Talentliste
 		form(action="/talent/"+_id, method="post", accept-charset="utf-8")
 			input(type="hidden", name="_method", value="put")
