--- a/views/system/new-liturgie.jade
+++ b/views/system/new-liturgie.jade
@@ -11,6 +11,8 @@ html
 				width: 15em;
 			}
 	body
+		#logout
+			a(href="/logout") abmelden
 		form#new(action="/liturgie/neu", method="post", accept-charset="utf-8")
 			fieldset
 				h1.mitte Neue Liturgie
