--- a/views/system/new-variant.jade
+++ b/views/system/new-variant.jade
@@ -5,6 +5,8 @@ html(lang="de")
 		title Neue Zaubervariante
 		link(rel="stylesheet", type="text/css", href="/system-new.css")
 	body
+		#logout
+			a(href="/logout") abmelden
 		form#nesp(action="/variante/neu", method="post", accept-charset="utf-8")
 			fieldset
 				h1.mitte Neue Zaubervariante:
