--- a/views/system/table-of-miracles.jade
+++ b/views/system/table-of-miracles.jade
@@ -6,6 +6,8 @@ html
 		link(rel="stylesheet", type="text/css", href="/system-list.css")
 	body
 		header
+			#logout
+				a(href="/logout") abmelden
 			a(href="/liturgie/neu") neue Liturgie
 		main
 			table
