--- a/views/system/table-of-rituals.jade
+++ b/views/system/table-of-rituals.jade
@@ -19,6 +19,8 @@ html(lang="de")
 			}
 	body
 		header
+			#logout
+				a(href="/logout") abmelden
 			a(href="/ritual/neu") Neues Ritual
 		main
 			table
