--- a/views/system/table-of-spells.jade
+++ b/views/system/table-of-spells.jade
@@ -34,6 +34,8 @@ html(lang="de")
 			}
 	body
 		header
+			#logout
+				a(href="/logout") abmelden
 			a(href="/zauber/neu") neuer Zauber
 			br
 			a(href="/variante/neu") neue Variante
