--- a/views/system/new-talent.jade
+++ b/views/system/new-talent.jade
@@ -13,6 +13,8 @@ html
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 		link(rel="stylesheet", type="text/css", href="/system-new.css")
 	body
+		#logout
+			a(href="/logout") abmelden
 		form(action="/talent/neu", method="post", accept-charset="utf-8")
 			fieldset
 				h1.mitte Neues Talent:
