--- a/views/system/new-zauber.jade
+++ b/views/system/new-zauber.jade
@@ -11,6 +11,8 @@ html(lang="de")
 		title Neuer Zauberspruch
 		link(rel="stylesheet", type="text/css", href="/system-new.css")
 	body
+		#logout
+			a(href="/logout") abmelden
 		form#nesp(action="/zauber/neu", method="post", accept-charset="utf-8")
 			fieldset
 				h1.mitte Neuer Zauberspruch:
