--- a/views/system/signup.jade
+++ b/views/system/signup.jade
@@ -14,20 +14,23 @@ html(lang="de")
 			.col-sm-6.col-sm-offset-3
 				h1
 					span.fa.fa-sign-in &nbsp;
-					| Anmeldung
+					| Registrierung
 				if (message.length > 0)
 					.alert.alert-danger=message
-				form(action="/login", method="post")
+				form(action="/signup", method="post")
+					.form-group
+						label(for="un") Name
+						input#un(type="text", name="display_name").form-control
 					.form-group
 						label(for="email") E-Mail
 						input#email(type="text", name="email", required).form-control
 					.form-group
 						label(for="pass") Passwort
 						input#pass(type="password", name="password", required).form-control
-					button(type="submit").btn.btn-warning.btn-lg anmelden
+					button(type="submit").btn.btn-warning.btn-lg registrieren
 				hr
-				p Noch kein Benutzer?&nbsp;
-					a(href="/signup") Registrieren!
+				p Bereits registriert?&nbsp;
+					a(href="/signup") Anmelden!
 				p Zurück zum 
 					a(href="/") Anfang
 			
