--- a/views/system/splash.jade
+++ b/views/system/splash.jade
@@ -18,6 +18,11 @@ html(lang="de")
 				a(href="/login").btn.btn-default
 					span.fa.fa-user &nbsp;
 					| Anmelden
+				| &nbsp;
 				a(href="/signup").btn.btn-default
 					span.fa.fa-user &nbsp;
 					| Registrieren
+				| &nbsp;
+				a(href="/auth/google").btn.btn-danger
+					span.fa.fa-google-plus &nbsp;
+					| Google
