--- a/views/system/edit-ritual.jade
+++ b/views/system/edit-ritual.jade
@@ -14,7 +14,7 @@ html(lang="de")
 		script(src="/jquery-2.0.3.min.js")
 	body
 		#logout
-			a(href="/logout") #{user.local.name} abmelden
+			a(href="/logout") abmelden
 		form#nerit(action="/ritual/"+_ritual._id, method="post", accept-charset="utf-8")
 			input(type="hidden", name="_method", value="put")
 			fieldset
