Starting with Authorisation.

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -6,7 +6,7 @@ html(lang="de")
 		link(rel="stylesheet", type="text/css", href="/system-upload.css")
 	body
 		#logout
-			a(href="/logout") #{user.local.name} abmelden
+			a(href="/logout") abmelden
 		h1 Mach was in der Datenbank …
 		ul
 			li Talente
