--- a/views/system/splash.jade
+++ b/views/system/splash.jade
@@ -9,6 +9,9 @@ html(lang="de")
 			body {
 				padding: 5em;
 			}
+			a {
+				width: 9em;
+			}
 	body
 		.container
 			.jumbotron.text-center
@@ -26,3 +29,9 @@ html(lang="de")
 				a(href="/auth/google").btn.btn-danger
 					span.fa.fa-google-plus &nbsp;
 					| Google
+				| &nbsp;
+				a.btn.btn-primary
+					span.fa.fa-facebook &nbsp;
+					| Facebook
+				| &nbsp;
+				a.btn.btn-warning OpenID
