--- a/views/geweiht.jade
+++ b/views/geweiht.jade
@@ -27,7 +27,7 @@ mixin SFTableSection(__liste, __name)
 						- for (var y=x, l=__liste.length; y<l; y++)
 							li= __liste[y]
 
-!!! 5
+doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
