Designing Weapon Editing. Fixing 'git status! 5' in Jade.

--- a/views/edit-held/procon.jade
+++ b/views/edit-held/procon.jade
@@ -13,7 +13,7 @@ mixin stagedProCon(pro, x, opt)
 		label(for="pc_"+id)= pro
 		input(type="number", min=opt.min||1, max=opt.max, step=opt.step||1)
 
-!!! 5
+doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
