--- a/views/system/edit-zauber.jade
+++ b/views/system/edit-zauber.jade
@@ -4,7 +4,7 @@ mixin Probe3()
 		select.probe(size="1", name="Probe")
 			each val in Attr
 				option= val
-!!! 5
+doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
