--- a/views/edit-held/waffen.jade
+++ b/views/edit-held/waffen.jade
@@ -7,9 +7,6 @@ html(lang="de")
 		link(rel="stylesheet", type="text/css", href="/nav.css")
 		script(src="/jquery-2.0.3.min.js")
 		style.
-			nav a {
-				width: 25%;
-			}
 			.selection td:first-child {
 				width: 2em;
 				padding: 0;
@@ -29,9 +26,17 @@ html(lang="de")
 		nav
 			ul#main-menu
 				li
-					a(href="#top") [Seitenanfang]
+					a(title="springe zu Abschnitt ...") &#8681;
+					// display section
+					ul
+						li
+							a(href="#nkw") Nahkampfwaffen
+						li
+							a(href="#pws") Parierwaffen &amp; Schilde
+						li
+							a(href="#fkw") Fernkampfwaffen
 				li
-					a(href="#save") [speichern]
+					a(href="#top") [Seitenanfang]
 				li
 					a(href="/held/"+_held._id, title="Heldenbogen")= "⇒ "+_held.Person.Name.split(' ')[0]
 		header#top
@@ -249,55 +254,7 @@ html(lang="de")
 				input(type="hidden", name="_method", value="delete")
 				.mitte
 					button(type="submit", disabled) alle Fernkampfwaffen löschen
-		script.
-			$('#addNKW').on("click", function() {
-				var $rows = $('#tmpl-nkw tr').clone();
-				var index = $(this).closest("table").find(".isactive").length;
-				$rows.find("*[name]").each(function() {
-					this.name = this.name.replace("{index}", index);
-				});
-				$rows.find("*[id]").each(function() {
-					this.id = this.id.replace("{index}", index);
-				});
-				$rows.find("*[for]").each(function() {
-					this.htmlFor = this.htmlFor.replace("{index}", index);
-				});
-				$(this).closest("table").append($rows);
-			});
-			$('#addPWS').on("click", function() {
-				var $rows = $('#tmpl-pws tr').clone();
-				var index = $(this).closest("table").find(".isactive").length;
-				$rows.find("*[name]").each(function() {
-					this.name = this.name.replace("{index}", index);
-				});
-				$(this).closest("table").append($rows);
-			});
-			$('#addFKW').on("click", function() {
-				var $rows = $('#tmpl-fkw tr').clone();
-				var index = $(this).closest("table").find(".isactive").length;
-				$rows.find("*[name]").each(function() {
-					this.name = this.name.replace("{index}", index);
-				});
-				$rows.find("*[id]").each(function() {
-					this.id = this.id.replace("{index}", index);
-				});
-				$rows.find("*[for]").each(function() {
-					this.htmlFor = this.htmlFor.replace("{index}", index);
-				});
-				$(this).closest("table").append($rows);
-			});
-			$('table').on("click", '.isactive', function() {
-				var $tr     = $(this).closest("tr");
-				var counter = this.dataset.span;
-				if (counter == 2) {
-					$tr = $tr.add($tr.next());
-				}
-				$tr.find("input[name], select[name]").prop("disabled", !this.checked);
-			});
-			$('table').on("click", '.wurf', function() {
-				$(this).nextAll().prop("disabled", !this.checked);
-			});
-			$('button').prop("disabled", false);
+		script(src="/edit-waffen.js")
 			
 		table(style="display: none;")
 			tbody#tmpl-nkw
