--- a/views/edit-held/kleidung.jade
+++ b/views/edit-held/kleidung.jade
@@ -72,57 +72,57 @@ html(lang="de")
 							td
 								input.isactive(type="checkbox", checked)
 							td
-								input#nm.fullSize(type="text", name="Name", placeholder="Bezeichnung")
+								input#nm.fullSize(type="text", name="Ausrüstung.Kleidung[{index}][Name]", placeholder="Bezeichnung")
 							td
-								input#ko(type="number", name="Ko", min="0", step="1", value="0")
+								input#ko(type="number", name="Ausrüstung.Kleidung[{index}][Ko]", min="0", step="1", value="0")
 							td
-								input#br(type="number", name="Br", min="0", step="1", value="0")
+								input#br(type="number", name="Ausrüstung.Kleidung[{index}][Br]", min="0", step="1", value="0")
 							td
-								input#ru(type="number", name="Rü", min="0", step="1", value="0")
+								input#ru(type="number", name="Ausrüstung.Kleidung[{index}][Rü]", min="0", step="1", value="0")
 							td
-								input#ba(type="number", name="Ba", min="0", step="1", value="0")
+								input#ba(type="number", name="Ausrüstung.Kleidung[{index}][Ba]", min="0", step="1", value="0")
 							td
-								input#ra(type="number", name="RA", min="0", step="1", value="0")
+								input#ra(type="number", name="Ausrüstung.Kleidung[{index}][RA]", min="0", step="1", value="0")
 							td
-								input#la(type="number", name="LA", min="0", step="1", value="0")
+								input#la(type="number", name="Ausrüstung.Kleidung[{index}][LA]", min="0", step="1", value="0")
 							td
-								input#rb(type="number", name="RB", min="0", step="1", value="0")
+								input#rb(type="number", name="Ausrüstung.Kleidung[{index}][RB]", min="0", step="1", value="0")
 							td
-								input#lb(type="number", name="LB", min="0", step="1", value="0")
+								input#lb(type="number", name="Ausrüstung.Kleidung[{index}][LB]", min="0", step="1", value="0")
 							td
-								input#rs(type="number", name="RS", min="0", value="0")
+								input#rs(type="number", name="Ausrüstung.Kleidung[{index}][RS]", min="0", value="0")
 							td
-								input#be(type="number", name="BE", min="0", value="0")
+								input#be(type="number", name="Ausrüstung.Kleidung[{index}][BE]", min="0", value="0")
 							td
 								button#add(type="button") neu
 					tbody
-						if Ausrüstung && Ausrüstung.Rüstung
-							each __rst in Ausrüstung.Rüstung
+						if Ausrüstung && Ausrüstung.Kleidung
+							each __rst, __idx in Ausrüstung.Kleidung
 								tr
 									td
 										input.isactive(type="checkbox", checked)
 									td
-										input.fullSize(type="text", name="Name", placeholder="Bezeichnung", value=__rst.Name)
+										input.fullSize(type="text", name="Ausrüstung.Kleidung[#{__idx}][Name]", placeholder="Bezeichnung", value=__rst.Name)
 									td
-										input(type="number", name="Ko", min="0", step="1", value=__rst.Ko)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][Ko]", min="0", step="1", value=__rst.Ko)
 									td
-										input(type="number", name="Br", min="0", step="1", value=__rst.Br)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][Br]", min="0", step="1", value=__rst.Br)
 									td
-										input(type="number", name="Rü", min="0", step="1", value=__rst.Rü)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][Rü]", min="0", step="1", value=__rst.Rü)
 									td
-										input(type="number", name="Ba", min="0", step="1", value=__rst.Ba)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][Ba]", min="0", step="1", value=__rst.Ba)
 									td
-										input(type="number", name="RA", min="0", step="1", value=__rst.RA)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][RA]", min="0", step="1", value=__rst.RA)
 									td
-										input(type="number", name="LA", min="0", step="1", value=__rst.LA)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][LA]", min="0", step="1", value=__rst.LA)
 									td
-										input(type="number", name="RB", min="0", step="1", value=__rst.RB)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][RB]", min="0", step="1", value=__rst.RB)
 									td
-										input(type="number", name="LB", min="0", step="1", value=__rst.LB)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][LB]", min="0", step="1", value=__rst.LB)
 									td
-										input(type="number", name="RS", min="0", value=__rst.RS)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][RS]", min="0", value=__rst.RS)
 									td
-										input(type="number", name="BE", min="0", value=__rst.BE)
+										input(type="number", name="Ausrüstung.Kleidung[#{__idx}][BE]", min="0", value=__rst.BE)
 									td
 
 				.mitte
