Finishing Equipment editing/display.

--- a/public/show.css
+++ b/public/show.css
@@ -24,12 +24,14 @@
 .talente tbody tr:nth-child(odd) {
 	background-color: #eee;
 }
+/*
 .talente tbody td {
 	text-align: center;
 }
 .talente tbody td:first-child {
 	text-align: left;
 }
+*/
 .eigenschaften th {
 	background-color: #eee;
 }
