--- a/views/edit-held/sf.jade
+++ b/views/edit-held/sf.jade
@@ -18,7 +18,7 @@ unless SF.magisch
 unless SF.geweiht
 	- SF.geweiht = []
 
-doctype 5
+doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
