--- a/views/edit-held/talente.jade
+++ b/views/edit-held/talente.jade
@@ -105,7 +105,7 @@ mixin languagetable(__data, __name)
 					td.mitte
 						input.unlock(type="number", name="Talente[#{__name}][#{key}][wert]", min="-3", max=__stdTalent.komplexität, step="1", value=__heldentalent.wert, disabled=!__isAvailable)
 
-doctype 5
+doctype html
 html(lang="de")
 	head
 		meta(charset="utf-8")
